Docker now updated 2.6